[package]
name = "netease_toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
rqcode = { git = "https://github.com/jewlexx/qrcode-rust.git" }
